Fix for name boxes wrapping main image

--- a/themes/colors/css-1.5.4/css/colors.css
+++ b/themes/colors/css-1.5.4/css/colors.css
@@ -2967,13 +2967,11 @@ span.link_text {
 
 #indi_mainimage {
 	float: left;
-	min-width: 120px;
+	padding: 0 10px 0 0;
 }
 
-#indi_mainimage img {
-	display: block;
-	margin: auto;
-	padding: 0 5px 0 0;
+#header_accordion1 {
+	overflow: hidden;
 }
 
 #header_accordion1 .indi_name_details {
@@ -3089,10 +3087,7 @@ dd .deletelink {
 
 [dir=rtl] #indi_mainimage {
 	float: right;
-}
-
-[dir=rtl] #indi_mainimage img{
-	padding: 0 0 0 5px;
+	padding: 0 0 0 10px;
 }
 
 [dir=rtl] #indi_note .fact_NOTE {
