--- a/themes/fab/css-1.5.4/style.css
+++ b/themes/fab/css-1.5.4/style.css
@@ -1778,17 +1778,11 @@ span.link_text {
 
 #indi_mainimage {
 	float: right;
-	min-width: 120px;
-}
-
-#indi_mainimage img {
-	display: block;
-	margin: auto;
-	padding: 0 0 0 5px;
 }
 
 #header_accordion1 {
-	padding: 0 10px
+	padding: 0 10px;
+	overflow: hidden;
 }
 
 #header_accordion1 .indi_name_details {
@@ -1872,10 +1866,6 @@ dd .deletelink {
 
 [dir=rtl] #indi_mainimage {
 	float: left;
-}
-
-[dir=rtl] #indi_mainimage img{
-	padding: 0 5px 0 0;
 }
 
 [dir=rtl] #indi_note .fact_NOTE {
