--- a/themes/minimal/css-1.5.4/style.css
+++ b/themes/minimal/css-1.5.4/style.css
@@ -2103,7 +2103,12 @@ span.link_text:hover {
 }
 
 #header_accordion1 {
-	padding: 0 10px;
+	overflow: hidden;
+	padding: 0 20px 0 0;
+}
+
+[dir='rtl'] #header_accordion1 {
+	padding: 0 0 0 20px;
 }
 
 #header_accordion1 .indi_name_details {
@@ -2225,10 +2230,6 @@ dd .deletelink {
 
 [dir=rtl] #indi_mainimage {
 	float: left;
-}
-
-[dir=rtl] #indi_mainimage img{
-	padding: 0 5px 0 0;
 }
 
 [dir=rtl] #indi_note .fact_NOTE {
@@ -3977,13 +3978,6 @@ a.icon-udarrow {
 /* Silhouettes on individual pages */
 #indi_mainimage {
 	float: right;
-	min-width: 120px;
-}
-
-#indi_mainimage img {
-	display: block;
-	margin: auto;
-	padding: 0 0 0 5px;
 }
 
 #indi_mainimage .icon-silhouette-F {
