--- a/themes/xenea/css-1.5.4/style.css
+++ b/themes/xenea/css-1.5.4/style.css
@@ -3082,6 +3082,7 @@ span.link_text {
 }
 
 #header_accordion1 {
+	overflow: hidden;
 	padding: 0 10px;
 }
 
@@ -3182,10 +3183,6 @@ dd .deletelink {
 
 [dir=rtl] #indi_mainimage {
 	float: right;
-}
-
-[dir=rtl] #indi_mainimage img{
-	padding: 0 0 0 5px;
 }
 
 [dir=rtl] #indi_note .fact_NOTE {
@@ -5011,13 +5008,7 @@ a.icon-uarrow:hover {
 /* Silhouettes on individual pages */
 #indi_mainimage {
 	float: left;
-	min-width: 120px;
-}
-
-#indi_mainimage img {
-	display: block;
-	margin: auto;
-	padding: 0 5px 0 0;
+	padding: 0 10px;
 }
 
 #indi_mainimage .icon-silhouette-F {
